2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: reorganize tests on TAP plans
	* tests/tap-skip-whole.test: Rename ...
	* tests/tap-planskip.test: ... to this
	* tests/tap-skip-whole-badexit.test: Rename ...
	* tests/tap-planskip-badexit.test: ... to this.
	* tests/tap-skip-whole-bailout.test: Rename ...
	* tests/tap-planskip-bailout.test: ... to this.
	* tests/tap-skip-whole-bailout.test: Rename ...
	* tests/tap-planskip-later-errors.test: ... to this.
	* tests/tap-skip-whole-unplanned.test: Rename ...
	* tests/tap-planskip-unplanned.test: ... to this.
	* tests/tap-skip-whole-whitespace.test: Rename ...
	* tests/tap-planskip-whitespace.test: ... to this.
	* tests/tap-skip-whole-continue.test: Rename ...
	* tests/tap-planskip-and-logging.test: ... to this, extend to try
	more cases, and fix heading comments.
	* tests/tap-skip-whole-lastline.test: Rename ...
	* tests/tap-planskip-late.test: ... to this, fix heading comments,
	and remove some checks that are just a duplication of those already
	performed in the previous script.
	* tests/tap-results-with-planskip.test: Rename to ...
	* tests/tap-planskip-unplanned-corner.test: ... this, and improve
	hading comments.
	* tests/tap-planskip-later-errors.test: New test.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: more TAP driver consistency w.r.t. 'prove'
	* tests/skip-results-with-planskip.test: New test, verifies that
	test results seen in a TAP stream that has a "plan with SKIP" are
	flagged as errors.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap: improve some comments in the TAP driver
	* lib/tap-driver (handle_tap_plan): Improve comments describing
	possible errors in a "plan with SKIP" directive.

2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
