@@ -1,5 +1,15 @@
 2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	coverage: TAP errors after a "Bail out!" directive aren't reported
+	This is compatible with the behaviour of the `prove' utility.
+	* tests/tap-bailout-suppress-later-errors.test: New test.
+	* tests/tap-bailout-badexit.test: Renamed ...
+	* tests/tap-bailout-suppress-badexit.test: ... to this, for
+	consistency.
+	* tests/Makefile.am (tap_with_common_setup_tests): Update.
+
+2011-08-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: reorganize tests on TAP plans
 	* tests/tap-skip-whole.test: Rename ...
 	* tests/tap-planskip.test: ... to this
